@@ -1,6 +1,8 @@
 package by.tami.apigateway.filter;
 
+import by.tami.apigateway.exception.BadRequestException;
 import by.tami.apigateway.util.JwtUtil;
+import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
@@ -10,30 +12,39 @@ import org.springframework.stereotype.Component;
 @Component
 public class AuthenticationFilter extends AbstractGatewayFilterFactory<AuthenticationFilter.Config> {
 
-    private final JwtUtil jwtUtil;
+    @Autowired
+    private JwtUtil jwtUtil;
 
-    public AuthenticationFilter(JwtUtil jwtUtil) {
-        this.jwtUtil = jwtUtil;
+    public AuthenticationFilter() {
+        super(Config.class);
     }
 
     @Override
-    public GatewayFilter apply(Config config) {
+    public GatewayFilter apply(@NonNull Config config) {
         return ((exchange, chain) -> {
             if (!exchange.getRequest().getHeaders().containsHeader(HttpHeaders.AUTHORIZATION)) {
-                throw new RuntimeException("Missing Authorization Header");
+                throw new BadRequestException("Missing Authorization Header");
             }
 
-            String authHeader = exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION).get(0);
-            if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            String authHeader = exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION).getFirst();
+            if (authHeader.startsWith("Bearer ")) {
                 authHeader = authHeader.substring(7);
             }
 
 
             if (!jwtUtil.validateToken(authHeader)) {
-                throw new RuntimeException("Token is not valid");
+                throw new BadRequestException("Token is not valid");
             }
 
-            return chain.filter(exchange);
+            String userId = jwtUtil.extractUserId(authHeader);
+
+            var mutatedExchange = exchange.mutate()
+                    .request(exchange.getRequest().mutate()
+                            .header("X-User-Id", userId)
+                            .build())
+                    .build();
+
+            return chain.filter(mutatedExchange);
         });
     }
 
